...
    return null;
  }

  Widget? _getSuffixIcon() {
    if (widget.isPassword) {
      return IconButton(
        key: const Key('password-toggle'),
        icon: Icon(_obscureText ? Icons.visibility : Icons.visibility_off),
        onPressed: () {
          setState(() {
            _obscureText = !_obscureText;
          });
        },
...
